# cuda-aaa-hip

./: CMakeLists.txt  README.md  check.sh
include/try-cuda-hip/: try.h
src/: try.cpp
test/: find.cpp  main.cpp
